<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/miscellaneousLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:orientation="vertical"
    app:behavior_peekHeight="52dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/miscellaneousText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous_text"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/noteColorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/background_note_color_1" />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/app_name"
                android:padding="13dp"
                android:src="@drawable/ic_done"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/background_note_color_2" />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/app_name"
                android:padding="13dp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/background_note_color_3" />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/app_name"
                android:padding="13dp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/background_note_color_4" />

            <ImageView
                android:id="@+id/imageColor4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/app_name"
                android:padding="13dp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/background_note_color_5" />

            <ImageView
                android:id="@+id/imageColor5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/app_name"
                android:padding="13dp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <TextView
            android:id="@+id/pickColorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/pick_color_text"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addImageLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="13dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image_text"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addLinkLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="13dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_link"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_link_text"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteNoteLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="13dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/delete_this_note_text"
            android:textColor="@color/colorDelete"
            android:textSize="17sp" />

    </LinearLayout>
</LinearLayout>